# rpi_cnc_remote

./: .gitignore  Cargo.toml  deploy.sh
src/: brain.rs  main.rs  port_io.rs  state.rs  state_parser.rs
