[package]
name = "rpi_cnc_remote"
version = "0.1.0"
edition = "2021"

[dependencies]
colog = "1.3.0"
log = "0.4.22"
config = "0.14.0"
tokio = { version = "1.40.0", features = ["macros", "full"] }
nusb = "0.1.10"
tokio-serial = { version = "5.4.4"}
gcode = "0.6.1"
#serde = { version = "1.0.210", features = ["derive"] }
#serde_json = "1.0.128"
#serde_repr = "0.1.19"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1

#[workspace.metadata.cross.target.aarch64-unknown-linux-gnu]
## Install libssl-dev:arm64, see <https://github.com/cross-rs/cross/blob/main/docs/custom_images.md#adding-dependencies-to-existing-images>
#pre-build = [
    #"dpkg --add-architecture $CROSS_DEB_ARCH",
    #"apt-get update && apt-get --assume-yes install libssl-dev:$CROSS_DEB_ARCH"
#]
